# src/api/router/dashboard.route.go
@@ -11,8 +11,9 @@ func DashboardRoutes(router *gin.RouterGroup) {
 	c := controllers.NewDashboardController()
 	router.Use(middleware.AuthencticateRequest())
 
-	router.POST("/invite-user", middleware.AuthorizeRequest([]string{"admin", "manager"}), c.InviteUser)
-	router.POST("/listAllUsers", c.ListAllUsers)
-	router.PATCH("/updateUser", middleware.AuthorizeRequest([]string{"admin", "manager"}), c.UpdateUser)
-	router.DELETE("/deleteUser", middleware.AuthorizeRequest([]string{"admin", "manager"}), c.DeleteUser)
+	router.POST("/User", middleware.AuthorizeRequest([]string{"admin", "manager"}), c.InviteUser)
+	router.POST("/inviteBulkUser", middleware.AuthorizeRequest([]string{"admin", "manager"}), c.InviteBulkUsers)
+	router.GET("/User/:page/:pageSize", c.ListAllUsers)
+	router.PATCH("/User", middleware.AuthorizeRequest([]string{"admin", "manager"}), c.UpdateUser)
+	router.DELETE("/User", middleware.AuthorizeRequest([]string{"admin", "manager"}), c.DeleteUser)
 }
